--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html{:"ng-app"=>""}
+%html{:"ng-app"=>"photogur"}
   %head
     %title NgPhotogur
     = stylesheet_link_tag    "application", :media => "all"
